# ChangeLog for www-apps/nanoc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Mar 2011; grafi <grafi@grafi.sakura.ne.jp> nanoc-3.1.6-r1.ebuild:
  fix header

*nanoc-3.1.6-r1 (06 Mar 2011)

  06 Mar 2011; grafi <grafi@grafi.sakura.ne.jp> +nanoc-3.1.6-r1.ebuild:
  add ruby19 to USE_RUBY

*nanoc-3.1.6 (29 Nov 2010)

  29 Nov 2010; Hans de Graaff <graaff@gentoo.org> +nanoc-3.1.6.ebuild,
  +metadata.xml:
  Initial import.
