@@ -2,10 +2,15 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  06 Mar 2011; grafi <grafi@grafi.sakura.ne.jp> nanoc-3.1.6-r1.ebuild:
-  fix header
+*nanoc-3.2.0_alpha3 (06 Mar 2011)
+
+  06 Mar 2011; grafi <grafi@grafi.sakura.ne.jp> +nanoc-3.2.0_alpha3.ebuild:
+  new version: nanoc-3.2.0_alpha3
 
 *nanoc-3.1.6-r1 (06 Mar 2011)
+
+  06 Mar 2011; grafi <grafi@grafi.sakura.ne.jp> nanoc-3.1.6-r1.ebuild:
+  fix header
 
   06 Mar 2011; grafi <grafi@grafi.sakura.ne.jp> +nanoc-3.1.6-r1.ebuild:
   add ruby19 to USE_RUBY
